feat: export real reports and surface student warnings